# ChessProjectCPL

./: .gitignore  .gitlab-ci.yml  .gitmodules  Board.cpp  Board.hpp  CMakeLists.txt  CastlingRights.cpp  CastlingRights.hpp  Engine.hpp  EngineFactory.cpp  EngineFactory.hpp  Fen.cpp  Fen.hpp  Main.cpp  Move.cpp  Move.hpp  Piece.cpp  Piece.hpp  PrincipalVariation.cpp  PrincipalVariation.hpp  README.md  Square.cpp  Square.hpp  TimeInfo.hpp  Uci.cpp  Uci.hpp
Tests/: BoardTests.cpp  CMakeLists.txt  EngineTests.cpp  FenTests.cpp  MoveTests.cpp  PieceTests.cpp  SquareTests.cpp  TestUtils.hpp  puzzledb.py  puzzlerunner.py
Tests/Puzzles/: crushing_castling.csv  crushing_enPassant.csv  crushing_simple.csv  mateIn1_castling.csv  mateIn1_enPassant.csv  mateIn1_simple.csv  mateIn2_castling.csv  mateIn2_enPassant.csv  mateIn2_simple.csv
